--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 	"homepage": "https://github.com/FireStreaker2/hentairead-cli#readme",
 	"dependencies": {
 		"chalk": "^5.3.0",
+		"cli-progress": "^3.12.0",
 		"commander": "^11.1.0",
 		"hentairead-js": "^1.0.1",
 		"node-fetch": "^3.3.2"
