--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"cli-progress": "^3.12.0",
 		"commander": "^11.1.0",
 		"hentairead-js": "^1.0.1",
-		"node-fetch": "^3.3.2"
+		"node-fetch": "^3.3.2",
+		"terminal-image": "^2.0.0"
 	}
 }
