--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
 		"chalk": "^5.3.0",
 		"cli-progress": "^3.12.0",
 		"commander": "^11.1.0",
+		"discord-rpc": "^4.0.1",
 		"hentairead-js": "^1.0.1",
 		"node-fetch": "^3.3.2",
+		"open": "^10.0.3",
 		"terminal-image": "^2.0.0"
 	}
 }
